--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
 <title>404 Page not found | LYC&#39;s Blog</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
-<meta name="author" content="Sulv">
+<meta name="author" content="M-YC-Liu">
 <link rel="canonical" href="https://mancini-yuchen-liu.github.io/404.html">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.css" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://mancini-yuchen-liu.github.io/img/OIG.jpg">
@@ -80,9 +80,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://mancini-yuchen-liu.github.io/" accesskey="h" title="LYC&#39;s Blog (Alt + H)">
-                <img src="https://mancini-yuchen-liu.github.io/img/OIG.jpg" alt="" aria-label="logo"
-                    height="35">LYC&#39;s Blog</a>
+            <a href="https://mancini-yuchen-liu.github.io/" accesskey="h" title="Home (Alt + H)">Home</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
