--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <title>LYC&#39;s Blog</title>
 
 <meta name="description" content="">
-<meta name="author" content="Sulv">
+<meta name="author" content="M-YC-Liu">
 <link rel="canonical" href="https://mancini-yuchen-liu.github.io/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.css" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://mancini-yuchen-liu.github.io/img/OIG.jpg">
@@ -75,7 +75,7 @@
   "description": "",
   "thumbnailUrl": "https://mancini-yuchen-liu.github.io/img/OIG.jpg",
   "sameAs": [
-      "https://github.com/Mancini-YuChen-Liu", "img/qq.jpg", "img/wechat.jpeg", "https://space.bilibili.com/28694728", "mailto:liuyc091502@outlook.com", "index.xml"
+      "https://github.com/Mancini-YuChen-Liu", "img/qq.jpg", "img/wechat.jpeg", "https://space.bilibili.com/28694728", "“mailto:liuyc091502@outlook.com\""
   ]
 }
 </script>
@@ -96,9 +96,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://mancini-yuchen-liu.github.io/" accesskey="h" title="LYC&#39;s Blog (Alt + H)">
-                <img src="https://mancini-yuchen-liu.github.io/img/OIG.jpg" alt="" aria-label="logo"
-                    height="35">LYC&#39;s Blog</a>
+            <a href="https://mancini-yuchen-liu.github.io/" accesskey="h" title="Home (Alt + H)">Home</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -163,8 +161,8 @@
 </header>
 <main class="main"><div class="profile">
     <div class="profile_inner">
-        <img draggable="false" src="https://mancini-yuchen-liu.github.io/img/Q.gif" alt="profile image" title=""
-            height="150" width="150" />
+        <img draggable="false" src="https://mancini-yuchen-liu.github.io/img/OIG.jpg" alt="profile image" title=""
+            height="128" width="128" />
         <h1>(〃&lsquo;▽&rsquo;〃)</h1>
         <span></span><div class="social-icons" >
     <a href="https://github.com/Mancini-YuChen-Liu" target="_blank" rel="noopener noreferrer me"
@@ -203,21 +201,12 @@
     <path d="m18.115 2.6667-2.6667 2.6667"/>
 </svg>
     </a>
-    <a href="mailto:liuyc091502@outlook.com" target="_blank" rel="noopener noreferrer me"
+    <a href="%e2%80%9cmailto:liuyc091502@outlook.com%22" target="_blank" rel="noopener noreferrer me"
         title="Email">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 21" fill="none" stroke="currentColor" stroke-width="2"
     stroke-linecap="round" stroke-linejoin="round">
     <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
     <polyline points="22,6 12,13 2,6"></polyline>
-</svg>
-    </a>
-    <a href="index.xml" target="_blank" rel="noopener noreferrer me"
-        title="RSS">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-    stroke-linecap="round" stroke-linejoin="round">
-    <path d="M4 11a9 9 0 0 1 9 9" />
-    <path d="M4 4a16 16 0 0 1 16 16" />
-    <circle cx="5" cy="19" r="1" />
 </svg>
     </a>
 </div>
@@ -238,9 +227,9 @@
                     🍕美食
                 </span>
             </a>
-            <a class="button" href="posts/life" rel="noopener" title="🏖 生活">
+            <a class="button" href="posts/life" rel="noopener" title="🌃 生活">
                 <span class="button-inner">
-                    🏖 生活
+                    🌃 生活
                 </span>
             </a>
         </div>
