--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 <title>LYC&#39;s Blog</title>
 
 <meta name="description" content="">
-<meta name="author" content="M-YC-Liu">
-<link rel="canonical" href="https://mancini-yuchen-liu.github.io/">
+<meta name="author" content="LYC">
+<link rel="canonical" href="https://Mancini-YuChen-Liu.github.io/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.css" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://mancini-yuchen-liu.github.io/img/OIG.jpg">
-<link rel="icon" type="image/png" sizes="16x16" href="https://mancini-yuchen-liu.github.io/img/OIG.jpg">
-<link rel="icon" type="image/png" sizes="32x32" href="https://mancini-yuchen-liu.github.io/img/OIG.jpg">
-<link rel="apple-touch-icon" href="https://mancini-yuchen-liu.github.io/img/OIG.jpg">
-<link rel="mask-icon" href="https://mancini-yuchen-liu.github.io/img/OIG.jpg">
+<link rel="icon" href="https://Mancini-YuChen-Liu.github.io/img/OIG.jpg">
+<link rel="icon" type="image/png" sizes="16x16" href="https://Mancini-YuChen-Liu.github.io/img/OIG.jpg">
+<link rel="icon" type="image/png" sizes="32x32" href="https://Mancini-YuChen-Liu.github.io/img/OIG.jpg">
+<link rel="apple-touch-icon" href="https://Mancini-YuChen-Liu.github.io/img/OIG.jpg">
+<link rel="mask-icon" href="https://Mancini-YuChen-Liu.github.io/img/OIG.jpg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="https://mancini-yuchen-liu.github.io/index.xml">
-<link rel="alternate" type="application/json" href="https://mancini-yuchen-liu.github.io/index.json">
+<link rel="alternate" type="application/rss+xml" href="https://Mancini-YuChen-Liu.github.io/index.xml">
+<link rel="alternate" type="application/json" href="https://Mancini-YuChen-Liu.github.io/index.json">
 <noscript>
     <style>
         #theme-toggle,
@@ -60,7 +60,7 @@
 </noscript><meta property="og:title" content="LYC&#39;s Blog" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://mancini-yuchen-liu.github.io/" />
+<meta property="og:url" content="https://Mancini-YuChen-Liu.github.io/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="LYC&#39;s Blog"/>
@@ -71,11 +71,11 @@
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "LYC's Blog",
-  "url": "https://mancini-yuchen-liu.github.io/",
+  "url": "https://Mancini-YuChen-Liu.github.io/",
   "description": "",
-  "thumbnailUrl": "https://mancini-yuchen-liu.github.io/img/OIG.jpg",
+  "thumbnailUrl": "https://Mancini-YuChen-Liu.github.io/img/OIG.jpg",
   "sameAs": [
-      "https://github.com/Mancini-YuChen-Liu", "img/qq.jpg", "img/wechat.jpeg", "https://space.bilibili.com/28694728", "“mailto:liuyc091502@outlook.com\""
+      "https://github.com/Mancini-YuChen-Liu", "img/qq.jpg", "img/wechat.jpeg", "https://space.bilibili.com/28694728", "mailto:liuyc091502@outlook.com"
   ]
 }
 </script>
@@ -96,7 +96,9 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://mancini-yuchen-liu.github.io/" accesskey="h" title="Home (Alt + H)">Home</a>
+            <a href="https://Mancini-YuChen-Liu.github.io/" accesskey="h" title="Personal Website (Alt + H)">
+                <img src="https://Mancini-YuChen-Liu.github.io/img/OIG.jpg" alt="" aria-label="logo"
+                    height="35">Personal Website</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -122,38 +124,33 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://mancini-yuchen-liu.github.io/search" title="🔍 搜索">
-                    <span>🔍 搜索</span>
+                <a href="https://Mancini-YuChen-Liu.github.io/search" title="🔍 search">
+                    <span>🔍 search</span>
                 </a>
             </li>
             <li>
-                <a href="https://mancini-yuchen-liu.github.io/" title="🏠 主页">
-                    <span class="active">🏠 主页</span>
+                <a href="https://Mancini-YuChen-Liu.github.io/" title="🏠 homepage">
+                    <span class="active">🏠 homepage</span>
                 </a>
             </li>
             <li>
-                <a href="https://mancini-yuchen-liu.github.io/posts" title="📚 文章">
-                    <span>📚 文章</span>
+                <a href="https://Mancini-YuChen-Liu.github.io/posts" title="📚 posts">
+                    <span>📚 posts</span>
                 </a>
             </li>
             <li>
-                <a href="https://mancini-yuchen-liu.github.io/tags" title="🧩 标签">
-                    <span>🧩 标签</span>
+                <a href="https://Mancini-YuChen-Liu.github.io/tags" title="🧩 tags">
+                    <span>🧩 tags</span>
                 </a>
             </li>
             <li>
-                <a href="https://mancini-yuchen-liu.github.io/archives/" title="⏱️ 时间轴">
-                    <span>⏱️ 时间轴</span>
+                <a href="https://Mancini-YuChen-Liu.github.io/archives/" title="⏱️ timeline">
+                    <span>⏱️ timeline</span>
                 </a>
             </li>
             <li>
-                <a href="https://mancini-yuchen-liu.github.io/about" title="🙋🏻‍♂️ 关于">
-                    <span>🙋🏻‍♂️ 关于</span>
-                </a>
-            </li>
-            <li>
-                <a href="https://mancini-yuchen-liu.github.io/links" title="🤝 友链">
-                    <span>🤝 友链</span>
+                <a href="https://Mancini-YuChen-Liu.github.io/about" title="🙋🏻‍♂️ About">
+                    <span>🙋🏻‍♂️ About</span>
                 </a>
             </li>
         </ul>
@@ -161,7 +158,7 @@
 </header>
 <main class="main"><div class="profile">
     <div class="profile_inner">
-        <img draggable="false" src="https://mancini-yuchen-liu.github.io/img/OIG.jpg" alt="profile image" title=""
+        <img draggable="false" src="https://Mancini-YuChen-Liu.github.io/img/OIG.jpg" alt="profile image" title=""
             height="128" width="128" />
         <h1>(〃&lsquo;▽&rsquo;〃)</h1>
         <span></span><div class="social-icons" >
@@ -201,7 +198,7 @@
     <path d="m18.115 2.6667-2.6667 2.6667"/>
 </svg>
     </a>
-    <a href="%e2%80%9cmailto:liuyc091502@outlook.com%22" target="_blank" rel="noopener noreferrer me"
+    <a href="mailto:liuyc091502@outlook.com" target="_blank" rel="noopener noreferrer me"
         title="Email">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 21" fill="none" stroke="currentColor" stroke-width="2"
     stroke-linecap="round" stroke-linejoin="round">
@@ -212,24 +209,24 @@
 </div>
 
         <div class="buttons">
-            <a class="button" href="posts/travel" rel="noopener" title="✈️旅行">
+            <a class="button" href="posts/journey" rel="noopener" title="✈️ journey">
                 <span class="button-inner">
-                    ✈️旅行
+                    ✈️ journey
                 </span>
             </a>
-            <a class="button" href="posts/tech" rel="noopener" title="👨🏻‍💻技术">
+            <a class="button" href="posts/project" rel="noopener" title="👨🏻‍💻 project">
                 <span class="button-inner">
-                    👨🏻‍💻技术
+                    👨🏻‍💻 project
                 </span>
             </a>
-            <a class="button" href="posts/food" rel="noopener" title="🍕美食">
+            <a class="button" href="posts/food" rel="noopener" title="🍕 food">
                 <span class="button-inner">
-                    🍕美食
+                    🍕 food
                 </span>
             </a>
-            <a class="button" href="posts/life" rel="noopener" title="🌃 生活">
+            <a class="button" href="posts/life" rel="noopener" title="🏖 life">
                 <span class="button-inner">
-                    🌃 生活
+                    🏖 life
                 </span>
             </a>
         </div>
@@ -239,7 +236,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2024 <a href="https://mancini-yuchen-liu.github.io/">LYC&#39;s Blog</a></span>
+    <span>&copy; 2024 <a href="https://Mancini-YuChen-Liu.github.io/">LYC&#39;s Blog</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
