--- a/series/index.html
+++ b/series/index.html
@@ -8,17 +8,17 @@
 <title>Series | LYC&#39;s Blog</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
-<meta name="author" content="M-YC-Liu">
-<link rel="canonical" href="https://mancini-yuchen-liu.github.io/series/">
+<meta name="author" content="LYC">
+<link rel="canonical" href="https://Mancini-YuChen-Liu.github.io/series/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.css" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://mancini-yuchen-liu.github.io/img/OIG.jpg">
-<link rel="icon" type="image/png" sizes="16x16" href="https://mancini-yuchen-liu.github.io/img/OIG.jpg">
-<link rel="icon" type="image/png" sizes="32x32" href="https://mancini-yuchen-liu.github.io/img/OIG.jpg">
-<link rel="apple-touch-icon" href="https://mancini-yuchen-liu.github.io/img/OIG.jpg">
-<link rel="mask-icon" href="https://mancini-yuchen-liu.github.io/img/OIG.jpg">
+<link rel="icon" href="https://Mancini-YuChen-Liu.github.io/img/OIG.jpg">
+<link rel="icon" type="image/png" sizes="16x16" href="https://Mancini-YuChen-Liu.github.io/img/OIG.jpg">
+<link rel="icon" type="image/png" sizes="32x32" href="https://Mancini-YuChen-Liu.github.io/img/OIG.jpg">
+<link rel="apple-touch-icon" href="https://Mancini-YuChen-Liu.github.io/img/OIG.jpg">
+<link rel="mask-icon" href="https://Mancini-YuChen-Liu.github.io/img/OIG.jpg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="https://mancini-yuchen-liu.github.io/series/index.xml">
+<link rel="alternate" type="application/rss+xml" href="https://Mancini-YuChen-Liu.github.io/series/index.xml">
 <noscript>
     <style>
         #theme-toggle,
@@ -58,7 +58,7 @@
 </noscript><meta property="og:title" content="Series" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://mancini-yuchen-liu.github.io/series/" />
+<meta property="og:url" content="https://Mancini-YuChen-Liu.github.io/series/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Series"/>
@@ -81,7 +81,9 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://mancini-yuchen-liu.github.io/" accesskey="h" title="Home (Alt + H)">Home</a>
+            <a href="https://Mancini-YuChen-Liu.github.io/" accesskey="h" title="Personal Website (Alt + H)">
+                <img src="https://Mancini-YuChen-Liu.github.io/img/OIG.jpg" alt="" aria-label="logo"
+                    height="35">Personal Website</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -107,38 +109,33 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://mancini-yuchen-liu.github.io/search" title="🔍 搜索">
-                    <span>🔍 搜索</span>
+                <a href="https://Mancini-YuChen-Liu.github.io/search" title="🔍 search">
+                    <span>🔍 search</span>
                 </a>
             </li>
             <li>
-                <a href="https://mancini-yuchen-liu.github.io/" title="🏠 主页">
-                    <span>🏠 主页</span>
+                <a href="https://Mancini-YuChen-Liu.github.io/" title="🏠 homepage">
+                    <span>🏠 homepage</span>
                 </a>
             </li>
             <li>
-                <a href="https://mancini-yuchen-liu.github.io/posts" title="📚 文章">
-                    <span>📚 文章</span>
+                <a href="https://Mancini-YuChen-Liu.github.io/posts" title="📚 posts">
+                    <span>📚 posts</span>
                 </a>
             </li>
             <li>
-                <a href="https://mancini-yuchen-liu.github.io/tags" title="🧩 标签">
-                    <span>🧩 标签</span>
+                <a href="https://Mancini-YuChen-Liu.github.io/tags" title="🧩 tags">
+                    <span>🧩 tags</span>
                 </a>
             </li>
             <li>
-                <a href="https://mancini-yuchen-liu.github.io/archives/" title="⏱️ 时间轴">
-                    <span>⏱️ 时间轴</span>
+                <a href="https://Mancini-YuChen-Liu.github.io/archives/" title="⏱️ timeline">
+                    <span>⏱️ timeline</span>
                 </a>
             </li>
             <li>
-                <a href="https://mancini-yuchen-liu.github.io/about" title="🙋🏻‍♂️ 关于">
-                    <span>🙋🏻‍♂️ 关于</span>
-                </a>
-            </li>
-            <li>
-                <a href="https://mancini-yuchen-liu.github.io/links" title="🤝 友链">
-                    <span>🤝 友链</span>
+                <a href="https://Mancini-YuChen-Liu.github.io/about" title="🙋🏻‍♂️ About">
+                    <span>🙋🏻‍♂️ About</span>
                 </a>
             </li>
         </ul>
@@ -154,7 +151,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2024 <a href="https://mancini-yuchen-liu.github.io/">LYC&#39;s Blog</a></span>
+    <span>&copy; 2024 <a href="https://Mancini-YuChen-Liu.github.io/">LYC&#39;s Blog</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
